[package]
name = "egui_presentation"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = {version = "0.29.0", features = ["color-hex"] }
egui_extras = { version = "0.29.0", features = ["image"] }
eframe = { version = "0.29.0", default-features = false, features = [
    "accesskit",     
    "default_fonts",
    "glow",        
    "persistence",
] }
egui_commonmark = { version = "0.18" }
env_logger = "0.10"
itertools = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 

[profile.dev.package."*"]
opt-level = 2
